fix nav on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -182,13 +182,17 @@ header #logo{
 	float: right;
 }
 
-/* COMBO NAVIGATION ------------------------------------------------------------*/
+/* COMBO NAVIGATION 行動版的導航列------------------------------------------------------------*/
 
 #comboNav{
 	width: 100%;
 	margin-top: 30px;
 	margin-bottom: 20px;	
 	float: left;
+	background-color: #white;	
+	border-color: #47d7aa;
+	border-radius: 10px;
+	color: #6f94b8;
 }
 
 /* NAVIGATION ------------------------------------------------------------*/
